# learning-opengl

./: .clangd  CMakeLists.txt  flake.nix  hello-triangle  hi.glsl  main.c  shader.h  shader.vert
.cache/clangd/index/: gl.c.C43399FFFA59ECE0.idx  gl.h.EBBE4A01BFE6A71C.idx  khrplatform.h.F40ACB5E8B2A90F2.idx  main.c.A0A1F995111697F7.idx  main.c.EAD61BB482B80066.idx  shader.c.909499E60998630E.idx  shader.h.0EAA691DAECC14B5.idx
glad/include/glad/: gl.h
shaders/: shader.frag  shader.vert
src/: main.c  shader.c
